syntax = "proto3";

package proto;

option java_package = "com.hedera.hashgraph.stablecoin.proto";
option java_multiple_files = true;

import "ConstructTransactionData.proto";
import "ApproveAllowanceTransactionData.proto";
import "MintTransactionData.proto";
import "BurnTransactionData.proto";
import "TransferTransactionData.proto";
import "TransferFromTransactionData.proto";
import "ProposeOwnerTransactionData.proto";
import "ClaimOwnershipTransactionData.proto";
import "ChangeSupplyManagerTransactionData.proto";
import "ChangeComplianceManagerTransactionData.proto";
import "ChangeEnforcementManagerTransactionData.proto";
import "FreezeTransactionData.proto";
import "UnfreezeTransactionData.proto";
import "WipeTransactionData.proto";
import "SetKycPassedTransactionData.proto";
import "UnsetKycPassedTransactionData.proto";
import "IncreaseAllowanceTransactionData.proto";
import "DecreaseAllowanceTransactionData.proto";
import "ApproveExternalTransferTransactionData.proto";
import "ExternalTransferTransactionData.proto";

message TransactionBody {
    bytes caller = 1;

    // HederaTransactionId.accountId
    uint64 operatorAccountNum = 2;

    // HederaTransactionId.validStart
    uint64 validStartNanos = 3;

    oneof data {
        ConstructTransactionData construct = 10;
        ApproveAllowanceTransactionData approve = 11;
        MintTransactionData mint = 12;
        BurnTransactionData burn = 13;
        TransferTransactionData transfer = 14;
        TransferFromTransactionData transferFrom = 15;
        ProposeOwnerTransactionData proposeOwner = 16;
        ClaimOwnershipTransactionData claimOwnership = 17;
        ChangeSupplyManagerTransactionData changeSupplyManager = 18;
        ChangeComplianceManagerTransactionData changeComplianceManager = 19;
        ChangeEnforcementManagerTransactionData changeEnforcementManager = 20;
        FreezeTransactionData freeze = 21;
        UnfreezeTransactionData unfreeze = 22;
        WipeTransactionData wipe = 23;
        SetKycPassedTransactionData setKycPassed = 24;
        UnsetKycPassedTransactionData unsetKycPassed = 25;
        IncreaseAllowanceTransactionData increaseAllowance = 26;
        DecreaseAllowanceTransactionData decreaseAllowance = 27;
        ApproveExternalTransferTransactionData approveExternalTransfer = 28;
        ExternalTransferTransactionData externalTransfer = 29;
        ExternalTransferTransactionData externalTransferFrom = 30;
    }
}
